GPB-82 - Separate the search functionality for game stores from the web service